--- a/instrumentcluster/project/CMakeLists.txt
+++ b/instrumentcluster/project/CMakeLists.txt
@@ -34,6 +34,7 @@ qt_add_resources(appCanprocess "resources"
         framefffinal.png
         needle.png
         needle_battery.png
+        low_battery.png
 
         
 )
