--- a/.github/workflows/practice.yml
+++ b/.github/workflows/practice.yml
@@ -53,4 +53,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: build-artifacts
-        path: build/InstrumentCluster
+        path: build/appCanprocess
