--- a/.github/workflows/practice.yml
+++ b/.github/workflows/practice.yml
@@ -42,7 +42,7 @@ jobs:
           ls -la /project/build && \
           echo 'Checking for CMakeLists.txt in build directory:' && \
           ls -la /project/build/src/ && \
-          cd build && \
+          cd /project/build/src/ && \
           cmake . && \
           make && \
           cp appCanprocess /project/
