changed yml file

--- a/.github/workflows/practice.yml
+++ b/.github/workflows/practice.yml
@@ -3,7 +3,7 @@ name: Build Project with Prebuilt Docker Image
 on:
   push:
     branches:
-      - final
+      - main
   pull_request:
     branches:
       - main
